--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,72 +1,61 @@
-name: CI/CD Pipeline
-
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    - name: Install Dependencies
-      run: |
-        echo 'Placeholder: Installing dependencies...'
+      - name: Set up Python version
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.8'
 
-    - name: Run Tests
-      run: |
-        echo 'Placeholder: Running tests...'
+      - name: Create and start virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
 
-    - name: Build Application
-      run: |
-        echo 'Placeholder: Building application...'
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
-    - name: Archive Build Artifacts
-      run: |
-        echo 'Placeholder: Archiving build artifacts...'
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
-    - name: Publish Build Artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: build-artifacts
-        path: ${{ github.workspace }}/build
+      - name: Upload artifact for deployment jobs
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-app
+          path: |
+            release.zip
+            !venv/
 
-  test:
-    needs: build
+  deploy:
     runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: python-app
 
-   # - name: Download Build Artifacts
-   #   uses: actions/download-artifact@v2
-   #   with:
-   #     name: build-artifacts
-   #     path: ${{ github.workspace }}/build
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
 
-   # - name: Run Integration Tests
-   #   run: |
-   #     echo 'Placeholder: Running integration tests...'
-
- # deploy:
- #   needs: test
- #   runs-on: ubuntu-latest
-
-#    steps:
-#    - name: Checkout Repository
-#      uses: actions/checkout@v2
-
-#    - name: Download Build Artifacts
-#      uses: actions/download-artifact@v2
-#      with:
-#        name: build-artifacts
-#        path: ${{ github.workspace }}/build
-
-#    - name: Deploy to Production
-#      run: |
-#        echo 'Placeholder: Deploying to production environment...'
+    #  - name: 'Deploy to Azure Web App'
+    #    uses: azure/webapps-deploy@v2
+    #    id: deploy-to-webapp
+    #    with:
+    #      app-name: 'OBPM'
+    #      slot-name: 'Production'
+    #      publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_222882C67C18402FAF95BD35D149B579 }}
