--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+name: Python CI/CD
+
 on:
   push:
     branches:
@@ -9,47 +11,48 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
           python-version: '3.8'
 
-      - name: Create and start virtual environment
+      - name: Create and Activate Virtual Environment
         run: |
           python -m venv venv
           source venv/bin/activate
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      - name: Zip artifact for deployment
-        run: zip python-app.zip ./* -r
+      # Replace this with your test command
 
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
+      - name: Zip Artifact for Deployment
+        run: zip -r python-app.zip ./*
+
+      - name: Upload Artifact for Deployment
+        uses: actions/upload-artifact@v2
         with:
           name: python-app
-          path: |
-            python-app.zip
-            !venv/
+          path: python-app.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+      - name: Download Artifact from Build Job
+        uses: actions/download-artifact@v2
         with:
           name: python-app
 
-      - name: Unzip artifact for deployment
-        run: unzip python-app.zip
+      - name: Unzip Artifact for Deployment
+        run: unzip -o python-app.zip
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           cd python-app
           pip install -r requirements.txt
