--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Python CI/CD
+name: Build and deploy Python app to Azure Web App - OBPS
 
 on:
   push:
@@ -11,48 +11,53 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python version
+        uses: actions/setup-python@v1
         with:
           python-version: '3.8'
 
-      - name: Create and Activate Virtual Environment
+      - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Zip Artifact for Deployment
-        run: zip -r python-app.zip ./*
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
-      - name: Upload Artifact for Deployment
-        uses: actions/upload-artifact@v2
+      - name: Upload artifact for deployment jobs
+        uses: actions/upload-artifact@v3
         with:
           name: python-app
-          path: python-app.zip
+          path: |
+            release.zip
+            !venv/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download Artifact from Build Job
-        uses: actions/download-artifact@v2
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
         with:
           name: python-app
 
-      - name: Unzip Artifact for Deployment
-        run: unzip -o python-app.zip
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
 
-      - name: Install Dependencies
-        run: |
-          pip install -r requirements.txt
-
-      - name: Run Python Application Locally
-        run: |
-          python app.py
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v2
+        id: deploy-to-webapp
+        with:
+          app-name: 'OBPS'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_222882C67C18402FAF95BD35D149B579 }}
