--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-name:Deploy Python app to Azure Web App - OBPS
-
+name: Build and deploy Python app to Azure Web App - OBPS
 on:
   push:
     branches:
